<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/bg_signup">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:gravity="center"
            android:textSize="40dp"
            android:textColor="@color/white"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SDT"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/txtSDT"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/SDT_hint"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:inputType="numberDecimal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ten"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/txtTen"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/Ten_hint"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:inputType="text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ho"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/txtHo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/Ho_hint"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:inputType="text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/Email_hint"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:inputType="textEmailAddress"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass_hint"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/Enter_pass_hint"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:inputType="textPassword"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Enter_pass_hint_again"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/txtPassAgain"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/Enter_pass_hint_again"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:inputType="textPassword"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_continute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_btn_login"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/continute"
        android:textSize="18sp"/>
</LinearLayout>