<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewLocationActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue_700"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageButton
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:id="@+id/btn_back_new_location"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/new_location"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="340dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:hint="@string/hoTen"
                android:paddingLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edit_text"
                android:id="@+id/txt_name_newlocation"/>
            <EditText
                android:layout_width="340dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:hint="@string/SDT"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text"
                android:id="@+id/txt_sdt_newlocation"/>
            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <Spinner
                android:id="@+id/spinner_tinh"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                style="@style/TextAppearance.AppCompat.Widget.DropDownItem"/>
            <Spinner
                android:id="@+id/spinner_huyen"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                style="@style/TextAppearance.AppCompat.Widget.DropDownItem"/>
            <Spinner
                android:id="@+id/spinner_xa"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                style="@style/TextAppearance.AppCompat.Widget.DropDownItem"/>
            <EditText
                android:layout_width="340dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:hint="@string/SDT"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edit_text"
                android:id="@+id/txt_location_new"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="bottom|center"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btn_finish"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:background="@drawable/bg_btn_selector"
                    android:text="@string/finish"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>