<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".PayActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue_700">
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_back"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:id="@+id/btn_back_pay"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/pay"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/giao_tan_noi"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/lbl_pay_tudenlay"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bg_item_more"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:weightSum="10"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.7"
                    android:background="@drawable/ic_location"
                    android:backgroundTint="#60000000"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:layout_weight="9.3"
                    android:enabled="false"
                    android:id="@+id/txt_pay_location"
                    android:layout_marginStart="10dp"/>
                <ImageButton
                    android:layout_width="30dp"
                    android:id="@+id/btn_pay_edit_location"
                    android:layout_height="30dp"
                    android:backgroundTint="#60000000"
                    android:background="@drawable/ic_edit"
                    android:layout_gravity="center|end"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/selected_food"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lv_pay"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/note"
                android:textSize="16sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/note"
                android:paddingLeft="20dp"
                android:layout_marginStart="10dp"
                android:id="@+id/txt_note_pay"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/my_offer"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:id="@+id/remove_offer"
                    android:textColor="@color/red"
                    android:text="@string/remove_offer"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_edit_text"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:weightSum="10"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/ln_selected_offer"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.7"
                    android:background="@drawable/ic_sale"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/blue_700"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:layout_weight="9.3"
                    android:enabled="false"
                    android:id="@+id/txt_offer"
                    android:layout_marginStart="20dp"
                    android:textColor="#99FF0000"
                    android:text="@string/selected_offer"/>
                <ImageView
                    android:layout_width="24dp"
                    android:id="@+id/btn_next_payment"
                    android:layout_height="24dp"
                    android:backgroundTint="#60000000"
                    android:background="@drawable/ic_next"
                    android:layout_gravity="center|end"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/sum"
                    android:textStyle="bold"/>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textStart"
                        android:text="@string/sum_tam_tinh"
                        android:textSize="16sp"
                        android:layout_marginStart="10dp"/>
                    <TextView
                        android:id="@+id/lbl_sum_tam_tinh"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:text="0.0đ"
                        android:textSize="16sp"
                        android:textColor="@color/blue_700"
                        android:textStyle="bold"
                        android:layout_marginEnd="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textStart"
                        android:text="@string/sale"
                        android:textSize="16sp"
                        android:layout_marginStart="10dp"/>
                    <TextView
                        android:id="@+id/lbl_sale_payment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:text="0.0đ"
                        android:textSize="16sp"
                        android:textColor="@color/blue_700"
                        android:textStyle="bold"
                        android:layout_marginEnd="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textStart"
                        android:text="@string/sale_vouchers"
                        android:textSize="16sp"
                        android:layout_marginStart="10dp"/>
                    <TextView
                        android:id="@+id/lbl_sale_vouchers_payment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:text="0.0đ"
                        android:textSize="16sp"
                        android:textColor="@color/blue_700"
                        android:textStyle="bold"
                        android:layout_marginEnd="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textStart"
                        android:text="@string/fee_ship"
                        android:textSize="16sp"
                        android:layout_marginStart="10dp"/>
                    <TextView
                        android:id="@+id/lbl_ship_payment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:text="20.000đ"
                        android:textSize="16sp"
                        android:textColor="@color/blue_700"
                        android:textStyle="bold"
                        android:layout_marginEnd="10dp"/>
                </TableRow>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/custom_edit_text"
        android:orientation="vertical"
        android:weightSum="2"
        android:backgroundTint="#60D9d9d9"
        android:layout_gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1.2"
            android:weightSum="2">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:padding="10dp"
                android:layout_height="match_parent"
                android:layout_weight="0.98">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment"
                    android:textSize="16dp"
                    android:textColor="@color/blue_700"
                    android:textStyle="bold"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:id="@+id/ln_payment"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_money"/>
                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:id="@+id/spinner_payment"
                            style="@style/Animation.Design.BottomSheetDialog"/>
                    </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.01"
                android:layout_gravity="center"
                android:background="#60000000"/>
            <TextView
                android:id="@+id/lbl_cash_pay"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.98"
                android:padding="14dp"
                android:gravity="center|end"
                android:text="0.0 đ"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/blue_700"
                android:layout_gravity="center"/>
        </LinearLayout>
        <Button
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:id="@+id/btn_payment"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn_selector"
            android:text="@string/pay"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>